@startuml

title __CASSETETE's Class Diagram__\n

  namespace CasseTete {
    abstract class CasseTete.Cell.Cell {
        - x : int
        - y : int
        + Cell()
        + getX()
        + getY()
        + setX()
        + setY()
        + toString()
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellPath {
        + CellPath()
        + getPathEntry()
        + getPathExit()
        + setPathEntry()
        + setPathExit()
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellSymbol {
        - symbol : String
        + CellSymbol()
        + getSymbol()
        + setSymbol()
    }
  }
  

  namespace CasseTete {
    class CasseTete.Model {
        {static} - BOARDSIZE_X : int
        {static} - BOARDSIZE_Y : int
        {static} - NBRPAIRSYMBOL : int
        {static} - NBRSYMBOL : int
        - board : Cell[][]
        - boardTemp : Cell[][]
        - pathList : ArrayList<Cell>
        - pathListTemp : ArrayList<Cell>
        + CreateEmptyBoard()
        + GenerateBoard()
        + Model()
        + OnClickUndo()
        + getBoard()
        + parcoursDD()
        + startDD()
        + stopDD()
        - AcceptedJump()
        - CellInsidePathList()
        - CellSymbolInsidePathListTemp()
        - GeneratePath()
        - GenerateRandomSymbol()
        - ModifyPreviousCell()
        - acceptedNeighboor()
        - checkSymbol()
        - deleteCellPath()
        - forbidDiagonal()
        - getCellInBoard()
        - hasWon()
        - isEmpty()
        - removeCellPath()
        - resetCellPath()
    }
  }
  

  namespace CasseTete {
    class CasseTete.PathCoordinate {
        - x : int
        - y : int
        + PathCoordinate()
        + getX()
        + getY()
        + setX()
        + setY()
    }
  }
  

  namespace CasseTete {
    class CasseTete.View {
        ~ board : Cell[][]
        - gridPane : GridPane
        - x : int
        - y : int
        + View()
        + start()
        - CellPathToImg()
        - ControllerOnClickBoardSize()
        - ControllerOnClickNewGame()
        - ControllerOnClickUndo()
        - ControllerOnDragDetected()
        - ControllerOnDragDone()
        - ControllerOnDragEntered()
        - GenerateGridPane()
        - setDDOnImageView()
        - victoryPopup()
    }
  }
  

  CasseTete.Cell.CellPath -up-|> CasseTete.Cell.Cell
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathEntry
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathExit
  CasseTete.Cell.CellSymbol -up-|> CasseTete.Cell.Cell
  CasseTete.Model -up-|> java.util.Observable
  CasseTete.View -up-|> javafx.application.Application
  CasseTete.View o-- CasseTete.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
